--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="https://twitter.com/AngelRoddy7" class="icon fa-twitter"><span>Twitter</span></a>
 						<a href="https://www.linkedin.com/in/angelrodriguezlead/" class="icon fa-linkedin"><span>LinkedIn</span></a>
-						<a href="https://github.com/angelr1076" class="icon fa-github"><span>Github</span></a>
+						<!-- <a href="https://github.com/angelr1076" class="icon fa-github"><span>Github</span></a> -->
 					</nav>
 
 				<!-- Main -->
