updated correct index & images

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://peaceful-spire-99261.herokuapp.com/" class="image fit"><img src="images/yelpcamp.jpg" alt="">Yelp Camp Clone</a>
+											<a href="https://guarded-lake-14821.herokuapp.com/" class="image fit"><img src="images/beach.png" alt="">Beach Spotter</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://angel-bible-verses.netlify.com/" class="image fit"><img src="images/bible.jpg" alt="">Bible Verse Generator</a>
+											<a href="https://bible-verse-gen.netlify.com/" class="image fit"><img src="images/bible.png" alt="">Bible Verse Generator</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://angelr1076.github.io/flexpanels/" class="image fit"><img src="images/flexpanels.png" alt="">JS Flex Panels</a>
@@ -65,10 +65,10 @@
 											<a href="https://angelr1076.github.io/newColorGame/" class="image fit"><img src="images/color.jpg" alt="">JS RGB Color Game</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="" class="image fit"><img src="images/jsclock.png" alt="">JS Real-Time Clock</a>
+											<a href="https://angelr1076.github.io/jsclock/" class="image fit"><img src="images/jsclock.png" alt="">JS Real-Time Clock</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://fcc-weather-app.netlify.com/" class="image fit"><img src="images/weather.jpg" alt="">Weather App Using OpenWeather API</a>
+											<a href="https://angelr1076.github.io/weather-app/" class="image fit"><img src="images/weather.png" alt="">Weather App Using OpenWeather API</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="" alt=""></a>
