--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											<a href="https://angelr1076.github.io/flexpanels/" class="image fit"><img src="images/flexpanels.png" alt="">JS Flex Panels</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://angelr1076.github.io/newColorGame/" class="image fit"><img src="images/color.jpg" alt="">JS RGB Color Game</a>
+											<a href="https://angelr1076.github.io/newColorGame/" class="image fit"><img src="images/color.png" alt="">JS RGB Color Game</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://angelr1076.github.io/jsclock/" class="image fit"><img src="images/jsclock.png" alt="">JS Real-Time Clock</a>
