--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											<a href="https://guarded-lake-14821.herokuapp.com/" class="image fit"><img src="images/beach.png" alt="">Beach Spotter</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://bible-verse-gen.netlify.com/" class="image fit"><img src="images/bible.png" alt="">Bible Verse Generator</a>
+											<a href="https://nifty-spence-cd5cfe.netlify.com/" class="image fit"><img src="images/bible.png" alt="">Bible Verse Generator</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://angelr1076.github.io/flexpanels/" class="image fit"><img src="images/flexpanels.png" alt="">JS Flex Panels</a>
